@@ -1,40 +1,49 @@
 package com.danielagapov.spawn.ServiceTests;
 
-import com.danielagapov.spawn.DTOs.FriendRequest.FetchFriendRequestDTO;
-import com.danielagapov.spawn.DTOs.FriendTag.FriendTagDTO;
-import com.danielagapov.spawn.DTOs.User.AbstractUserDTO;
-import com.danielagapov.spawn.DTOs.User.BaseUserDTO;
-import com.danielagapov.spawn.DTOs.User.FriendUser.FullFriendUserDTO;
-import com.danielagapov.spawn.DTOs.User.FriendUser.RecommendedFriendUserDTO;
-import com.danielagapov.spawn.Exceptions.Logger.ILogger;
-import com.danielagapov.spawn.Models.User.User;
-import com.danielagapov.spawn.Repositories.User.IUserRepository;
-import com.danielagapov.spawn.Services.BlockedUser.IBlockedUserService;
-import com.danielagapov.spawn.Services.FriendRequest.IFriendRequestService;
-import com.danielagapov.spawn.Services.User.IUserService;
-import com.danielagapov.spawn.Services.UserSearch.UserSearchService;
-import com.danielagapov.spawn.Util.SearchedUserResult;
+import com.danielagapov.spawn.social.api.dto.FetchFriendRequestDTO;
+
+import com.danielagapov.spawn.user.api.dto.BaseUserDTO;
+import com.danielagapov.spawn.user.api.dto.FriendUser.FullFriendUserDTO;
+import com.danielagapov.spawn.user.api.dto.FriendUser.RecommendedFriendUserDTO;
+import com.danielagapov.spawn.shared.util.UserRelationshipType;
+import com.danielagapov.spawn.shared.util.UserStatus;
+import com.danielagapov.spawn.shared.exceptions.Logger.ILogger;
+import com.danielagapov.spawn.user.internal.domain.User;
+import com.danielagapov.spawn.activity.internal.repositories.IActivityUserRepository;
+import com.danielagapov.spawn.user.internal.repositories.IUserRepository;
+import com.danielagapov.spawn.analytics.internal.services.SearchAnalyticsService;
+import com.danielagapov.spawn.social.internal.services.IBlockedUserService;
+import com.danielagapov.spawn.social.internal.services.IFriendRequestService;
+import com.danielagapov.spawn.user.internal.services.FuzzySearchService;
+import com.danielagapov.spawn.user.internal.services.IFuzzySearchService;
+import com.danielagapov.spawn.user.internal.services.IUserService;
+import com.danielagapov.spawn.user.internal.services.UserSearchService;
+import com.danielagapov.spawn.shared.util.SearchedUserResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
+import org.springframework.data.domain.Limit;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.lenient;
 
 @ExtendWith(MockitoExtension.class)
 class UserSearchServiceTests {
 
     @Mock
     private IUserRepository userRepository; // Mock repository
+
+    @Mock
+    private IActivityUserRepository activityUserRepository;
 
     @Mock
     private IFriendRequestService friendRequestService;
@@ -48,8 +57,17 @@ class UserSearchServiceTests {
     @Mock
     private IBlockedUserService blockedUserService;
 
+    @Mock
+    private IFuzzySearchService<User> fuzzySearchService;
+
+    @Mock
+    private SearchAnalyticsService searchAnalyticsService;
+
+    @Mock
+    private com.danielagapov.spawn.user.internal.services.IUserFriendshipQueryService friendshipQueryService;
+
     @InjectMocks
-    private UserSearchService userSearchService; // Injected service to test
+    private UserSearchService userSearchService; // Core service with business logic
 
     // Create at least 5 users for testing
     private User user1, user2, user3, user4, user5;
@@ -62,64 +80,104 @@ class UserSearchServiceTests {
         user3 = new User(UUID.randomUUID(), "bob99", null, "Bob Smith", "Bio of Bob", "bob@example.com");
         user4 = new User(UUID.randomUUID(), "albert007", null, "Albert Jones", "Bio of Albert", "albert@example.com");
         user5 = new User(UUID.randomUUID(), "alexw", null, "Alex Williams", "Bio of Alex", "alex@example.com");
+        user1.setStatus(UserStatus.ACTIVE);
+        user2.setStatus(UserStatus.ACTIVE);
+        user3.setStatus(UserStatus.ACTIVE);
+        user4.setStatus(UserStatus.ACTIVE);
+        user5.setStatus(UserStatus.ACTIVE);
+        
+        // Mock default friendshipQueryService behavior with lenient stubbing
+        lenient().when(friendshipQueryService.getAllActiveUsers()).thenReturn(List.of());
+        lenient().when(friendshipQueryService.getFriendUserIdsByUserId(any())).thenReturn(List.of());
     }
 
     @Test
     void testSearchByQuery_ReturnsEmptyList_WhenQueryIsBlank() {
-        List<BaseUserDTO> result = userSearchService.searchByQuery("");
+        List<BaseUserDTO> result = userSearchService.searchByQuery("", null);
         assertTrue(result.isEmpty(), "Expected an empty list for a blank query.");
     }
 
     @Test
-    void testSearchByQuery_ReturnsEmptyList_WhenNoUsersMatchPrefix() {
-        // Simulate no users found for given prefix
-        when(userRepository.findUsersWithPrefix(anyString(), any()))
-                .thenReturn(Collections.emptyList());
+    void testSearchByQuery_ReturnsEmptyList_WhenNoUsersMatchQuery() {
+        // Arrange
+        String searchQuery = "nonexistent";
+        when(userRepository.findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class))).thenReturn(List.of());
 
-        List<BaseUserDTO> result = userSearchService.searchByQuery("Xyz");
-        assertTrue(result.isEmpty(), "Expected an empty list when no users match the prefix.");
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
+        assertTrue(result.isEmpty());
     }
 
     @Test
     void testSearchByQuery_FiltersAndRanksUsersCorrectly() {
-        // Simulate database returning 5 users when prefix is "a"
-        when(userRepository.findUsersWithPrefix(eq("a"), any()))
-                .thenReturn(Arrays.asList(user1, user2, user3, user4, user5));
+        // Arrange
+        String searchQuery = "alice";
+        List<User> mockUsers = List.of(user1, user2); // user1="Alice Johnson", user2="Alicia Jameson" 
+        when(userRepository.findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class))).thenReturn(mockUsers);
 
-        List<BaseUserDTO> result = userSearchService.searchByQuery("Alice");
+        // Mock fuzzy search to return user1 and user2 as matching results
+        when(fuzzySearchService.search(eq(searchQuery), eq(mockUsers), any(), any()))
+                .thenReturn(List.of(
+                        new FuzzySearchService.SearchResult<>(user1, 0.9, "name", false),
+                        new FuzzySearchService.SearchResult<>(user2, 0.8, "name", false)
+                ));
 
-        // Assert that results are not empty
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
         assertFalse(result.isEmpty(), "Expected non-empty results.");
-
-        // Check that at least one user is returned; adjust expected size if your filtering logic is known
-        // For example, if filtering is strict, you might expect 3 matches.
-        // Here we simply ensure the top result is the closest match.
-        BaseUserDTO topResult = result.get(0);
-        assertEquals("Alice Johnson", topResult.getName(), "The most similar user should be ranked first.");
+        assertEquals(2, result.size());
+        assertTrue(result.stream().anyMatch(u -> u.getName().equals("Alice Johnson")));
+        assertTrue(result.stream().anyMatch(u -> u.getName().equals("Alicia Jameson")));
     }
 
     @Test
     void testSearchByQuery_IncludesUsersIfFilteringRemovesTooManyResults() {
-        // Simulate only one user returned for prefix "b"
-        when(userRepository.findUsersWithPrefix(eq("b"), any()))
-                .thenReturn(List.of(user3));
+        // Arrange
+        String searchQuery = "bob";
+        List<User> mockUsers = List.of(user3); // user3 = "Bob Smith"
+        when(userRepository.findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class))).thenReturn(mockUsers);
 
-        List<BaseUserDTO> result = userSearchService.searchByQuery("Bobby");
+        // Mock fuzzy search to return user3 as a matching result
+        when(fuzzySearchService.search(eq(searchQuery), eq(mockUsers), any(), any()))
+                .thenReturn(List.of(
+                        new FuzzySearchService.SearchResult<>(user3, 0.85, "name", false)
+                ));
+
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
         assertEquals(1, result.size(), "Expected Bob to be included even if filtering removes too many users.");
+        assertEquals("Bob Smith", result.get(0).getName());
     }
 
     @Test
     void testSearchByQuery_SortsUsersByJaroWinklerDistance() {
-        // Simulate database returning users with names starting with "a"
-        when(userRepository.findUsersWithPrefix(eq("a"), any()))
-                .thenReturn(Arrays.asList(user5, user4, user2, user1));
+        // Arrange
+        String searchQuery = "alice";
+        List<User> mockUsers = List.of(user1, user2); // user1="Alice Johnson", user2="Alicia Jameson"
+        when(userRepository.findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class))).thenReturn(mockUsers);
 
-        List<BaseUserDTO> result = userSearchService.searchByQuery("Alicia");
+        // Mock fuzzy search to return users sorted by similarity (user1 has higher score than user2)
+        when(fuzzySearchService.search(eq(searchQuery), eq(mockUsers), any(), any()))
+                .thenReturn(List.of(
+                        new FuzzySearchService.SearchResult<>(user1, 0.95, "name", false),
+                        new FuzzySearchService.SearchResult<>(user2, 0.80, "name", false)
+                ));
 
-        // Expect that the user with the closest match ("Alicia") appears first.
-        // Adjust assertions based on how your ranking works. For this test, we assume user2 ("Alicia") is best.
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
         assertFalse(result.isEmpty(), "Expected non-empty result list.");
-        assertEquals("Alicia Jameson", result.get(0).getName(), "Alicia should be ranked highest based on similarity.");
+        assertEquals(2, result.size());
+        // The first result should be the one with higher similarity score
+        assertEquals("Alice Johnson", result.get(0).getName());
+        assertEquals("Alicia Jameson", result.get(1).getName());
     }
 
     @Test
@@ -135,17 +193,31 @@ class UserSearchServiceTests {
         when(friendRequestService.getIncomingCreateFriendRequestsByUserId(userId)).thenReturn(List.of());
         when(friendRequestService.getSentFriendRequestsByUserId(userId)).thenReturn(List.of());
 
+        // Mock fuzzy search service to return Alice Smith as a match for "Alice"
+        User userObject = new User();
+        userObject.setId(friend1.getId());
+        userObject.setName(friend1.getName());
+        userObject.setUsername(friend1.getUsername());
+        FuzzySearchService.SearchResult<User> searchResult = new FuzzySearchService.SearchResult<>(userObject, 0.95, "name", false);
+        when(fuzzySearchService.search(eq("Alice"), any(), any(), any())).thenReturn(List.of(searchResult));
+
         // Use spy to isolate the test from internal implementations
         UserSearchService spyUserSearchService = spy(userSearchService);
-        when(spyUserSearchService.getRecommendedMutuals(userId)).thenReturn(List.of(friend1, friend2, friend3));
-        when(userService.getFullFriendUsersByUserId(userId)).thenReturn(List.of());
+        doReturn(List.of(friend1, friend2, friend3)).when(spyUserSearchService).getRecommendedMutuals(userId);
+        lenient().when(friendshipQueryService.getFullFriendUsersByUserId(userId)).thenReturn(List.of());
 
         // Act
         SearchedUserResult result = spyUserSearchService.getRecommendedFriendsBySearch(userId, "Alice");
 
         // Assert
-        assertEquals(1, result.getSecond().size()); // Only Alice should be returned
-        assertEquals(friend1, result.getSecond().get(0));
+        assertEquals(1, result.getUsers().size()); // Only Alice should be returned
+        
+        // Verify the user details and relationship type
+        var searchResultUser = result.getUsers().get(0);
+        assertEquals(friend1.getId(), searchResultUser.getUser().getId());
+        assertEquals(friend1.getName(), searchResultUser.getUser().getName());
+        assertEquals(UserRelationshipType.RECOMMENDED_FRIEND, searchResultUser.getRelationshipType());
+        assertEquals(friend1.getMutualFriendCount(), searchResultUser.getMutualFriendCount());
     }
 
     @Test
@@ -158,18 +230,28 @@ class UserSearchServiceTests {
         // Mock the friend request service methods
         when(friendRequestService.getIncomingFetchFriendRequestsByUserId(userId)).thenReturn(List.of());
 
-        // Use spy to isolate the test from internal implementations
-        UserSearchService spyUserSearchService = spy(userSearchService);
-        doReturn(List.of(friend1, friend2)).when(spyUserSearchService).getLimitedRecommendedFriendsForUserId(userId);
-        doReturn(List.of()).when(userService).getFullFriendUsersByUserId(userId);
+        // Mock the userService methods that are called when searchQuery is empty
+        when(userService.getLimitedRecommendedFriendsForUserId(userId)).thenReturn(List.of(friend1, friend2));
+        when(userService.getFullFriendUsersByUserId(userId)).thenReturn(List.of());
 
         // Act
-        SearchedUserResult result = spyUserSearchService.getRecommendedFriendsBySearch(userId, "");
+        SearchedUserResult result = userSearchService.getRecommendedFriendsBySearch(userId, "");
 
         // Assert
-        assertEquals(2, result.getSecond().size()); // Both friends should be returned
-        assertTrue(result.getSecond().contains(friend1));
-        assertTrue(result.getSecond().contains(friend2));
+        assertEquals(2, result.getUsers().size()); // Both friends should be returned
+        
+        // Verify both users are present with correct relationship type
+        var recommendedFriends = result.getUsers().stream()
+                .filter(u -> u.getRelationshipType() == UserRelationshipType.RECOMMENDED_FRIEND)
+                .toList();
+        assertEquals(2, recommendedFriends.size());
+        
+        // Check that both friend IDs are present
+        var userIds = recommendedFriends.stream()
+                .map(u -> u.getUser().getId())
+                .toList();
+        assertTrue(userIds.contains(friend1.getId()));
+        assertTrue(userIds.contains(friend2.getId()));
     }
 
     @Test
@@ -187,13 +269,13 @@ class UserSearchServiceTests {
         // Use spy to isolate the test from internal implementations
         UserSearchService spyUserSearchService = spy(userSearchService);
         doReturn(List.of(friend1, friend2)).when(spyUserSearchService).getRecommendedMutuals(userId);
-        doReturn(List.of()).when(userService).getFullFriendUsersByUserId(userId);
+        lenient().doReturn(List.of()).when(friendshipQueryService).getFullFriendUsersByUserId(userId);
 
         // Act
         SearchedUserResult result = spyUserSearchService.getRecommendedFriendsBySearch(userId, "Charlie");
 
         // Assert
-        assertEquals(0, result.getSecond().size()); // No recommendations should match
+        assertEquals(0, result.getUsers().size()); // No recommendations should match
     }
 
     @Test
@@ -208,20 +290,44 @@ class UserSearchServiceTests {
         RecommendedFriendUserDTO user3Full = new RecommendedFriendUserDTO(user3Id, "person", "profile.jpg", "Lorem Ipsum", "A bio", "email@e.com", 1);
         RecommendedFriendUserDTO user4Full = new RecommendedFriendUserDTO(user4Id, "LaurenIbson", "profile.jpg", "Lauren Ibson", "A bio", "lauren_ibson@e.ca", 1);
 
-        UUID ftId = UUID.randomUUID();
-        // Very incomplete relationship but it should suffice for a test.
-        FriendTagDTO ft = new FriendTagDTO(ftId, "Everyone", "#ffffff", user1Id, List.of(), true);
-        FullFriendUserDTO user5Full = new FullFriendUserDTO(user5Id, "thatPerson", "profile.jpg", "That Person", "A bio", "thatPerson@email.com", List.of(ft));
+        FullFriendUserDTO user5Full = new FullFriendUserDTO(user5Id, "thatPerson", "profile.jpg", "That Person", "A bio", "thatPerson@email.com");
+
+        // Mock fuzzy search service to return both user3Full and user5Full as matches for "person"
+        User userObject3 = new User();
+        userObject3.setId(user3Full.getId());
+        userObject3.setName(user3Full.getName());
+        userObject3.setUsername(user3Full.getUsername());
+        FuzzySearchService.SearchResult<User> searchResult3 = new FuzzySearchService.SearchResult<>(userObject3, 0.95, "username", false);
+        
+        User userObject5 = new User();
+        userObject5.setId(user5Full.getId());
+        userObject5.setName(user5Full.getName());
+        userObject5.setUsername(user5Full.getUsername());
+        FuzzySearchService.SearchResult<User> searchResult5 = new FuzzySearchService.SearchResult<>(userObject5, 0.85, "name", false);
+        
+        when(fuzzySearchService.search(eq("person"), any(), any(), any())).thenReturn(List.of(searchResult3, searchResult5));
 
         when(friendRequestService.getIncomingFetchFriendRequestsByUserId(user1Id)).thenReturn(List.of());
         when(friendRequestService.getIncomingCreateFriendRequestsByUserId(user1Id)).thenReturn(List.of());
         when(friendRequestService.getSentFriendRequestsByUserId(user1Id)).thenReturn(List.of());
-        when(spyUserSearchService.getRecommendedMutuals(user1Id)).thenReturn(List.of(user2Full, user3Full, user4Full));
+        doReturn(List.of(user2Full, user3Full, user4Full)).when(spyUserSearchService).getRecommendedMutuals(user1Id);
         when(userService.getFullFriendUsersByUserId(user1Id)).thenReturn(List.of(user5Full));
 
         SearchedUserResult res = spyUserSearchService.getRecommendedFriendsBySearch(user1Id, "person");
-        SearchedUserResult expected = new SearchedUserResult(List.of(), List.of(user3Full), List.of(user5Full));
-        assertEquals(expected, res);
+        
+        // Verify that we get the expected users in the results
+        assertEquals(2, res.getUsers().size());
+        
+        // Find the recommended friend and the actual friend in the results
+        boolean foundRecommendedFriend = res.getUsers().stream()
+                .anyMatch(u -> u.getUser().getId().equals(user3Full.getId()) && 
+                              u.getRelationshipType() == UserRelationshipType.RECOMMENDED_FRIEND);
+        boolean foundFriend = res.getUsers().stream()
+                .anyMatch(u -> u.getUser().getId().equals(user5Full.getId()) && 
+                              u.getRelationshipType() == UserRelationshipType.FRIEND);
+        
+        assertTrue(foundRecommendedFriend, "Should contain the recommended friend");
+        assertTrue(foundFriend, "Should contain the actual friend");
     }
 
     @Test
@@ -235,69 +341,31 @@ class UserSearchServiceTests {
         RecommendedFriendUserDTO user3Full = new RecommendedFriendUserDTO(user3Id, "person", "profile.jpg", "Lorem Ipsum", "A bio", "email@e.com", 1);
         RecommendedFriendUserDTO user4Full = new RecommendedFriendUserDTO(user4Id, "LaurenIbson", "profile.jpg", "Lauren Ibson", "A bio", "lauren_ibson@e.ca", 1);
 
-        when(friendRequestService.getIncomingFetchFriendRequestsByUserId(user1Id)).thenReturn(List.of());
-        when(friendRequestService.getIncomingCreateFriendRequestsByUserId(user1Id)).thenReturn(List.of());
-        when(friendRequestService.getSentFriendRequestsByUserId(user1Id)).thenReturn(List.of());
-        when(spyUserSearchService.getRecommendedMutuals(user1Id)).thenReturn(List.of(user2Full, user3Full, user4Full));
-        when(userService.getFullFriendUsersByUserId(user1Id)).thenReturn(List.of());
+        // Mock fuzzy search service to return user3Full as a match for "person"
+        User userObject = new User();
+        userObject.setId(user3Full.getId());
+        userObject.setName(user3Full.getName());
+        userObject.setUsername(user3Full.getUsername());
+        FuzzySearchService.SearchResult<User> searchResult = new FuzzySearchService.SearchResult<>(userObject, 0.95, "username", false);
+        when(fuzzySearchService.search(eq("person"), any(), any(), any())).thenReturn(List.of(searchResult));
+
+        lenient().when(friendRequestService.getIncomingFetchFriendRequestsByUserId(user1Id)).thenReturn(List.of());
+        lenient().when(friendRequestService.getIncomingCreateFriendRequestsByUserId(user1Id)).thenReturn(List.of());
+        lenient().when(friendRequestService.getSentFriendRequestsByUserId(user1Id)).thenReturn(List.of());
+        doReturn(List.of(user2Full, user3Full, user4Full)).when(spyUserSearchService).getRecommendedMutuals(user1Id);
+        lenient().when(friendshipQueryService.getFullFriendUsersByUserId(user1Id)).thenReturn(List.of());
 
         SearchedUserResult res = spyUserSearchService.getRecommendedFriendsBySearch(user1Id, "person");
-        assertEquals(new SearchedUserResult(List.of(), List.of(user3Full), List.of()), res);
-    }
-
-    @Test
-    void isQueryMatch_ShouldMatchPartialFirstName() {
-        // Arrange
-        UUID userId = UUID.randomUUID();
-        AbstractUserDTO user = new BaseUserDTO(userId, "John Doe", "john@example.com", "johndoe", "Bio", "profile.jpg");
-
-        // Act & Assert - Using reflection to access private method
-        boolean result = (boolean) ReflectionTestUtils.invokeMethod(userSearchService, "isQueryMatch", user, "Jo");
-        assertTrue(result);
-    }
-
-    @Test
-    void isQueryMatch_ShouldMatchPartialLastName() {
-        // Arrange
-        UUID userId = UUID.randomUUID();
-        AbstractUserDTO user = new BaseUserDTO(userId, "John Doe", "john@example.com", "johndoe", "Bio", "profile.jpg");
-
-        // Act & Assert - Using reflection to access private method
-        boolean result = (boolean) ReflectionTestUtils.invokeMethod(userSearchService, "isQueryMatch", user, "oe");
-        assertTrue(result);
-    }
-
-    @Test
-    void isQueryMatch_ShouldMatchPartialUsername() {
-        // Arrange
-        UUID userId = UUID.randomUUID();
-        AbstractUserDTO user = new BaseUserDTO(userId, "John Doe", "john@example.com", "johndoe", "Bio", "profile.jpg");
-
-        // Act & Assert - Using reflection to access private method
-        boolean result = (boolean) ReflectionTestUtils.invokeMethod(userSearchService, "isQueryMatch", user, "hnd");
-        assertTrue(result);
-    }
-
-    @Test
-    void isQueryMatch_ShouldBeCaseInsensitive() {
-        // Arrange
-        UUID userId = UUID.randomUUID();
-        AbstractUserDTO user = new BaseUserDTO(userId, "John Doe", "john@example.com", "johndoe", "Bio", "profile.jpg");
-
-        // Act & Assert - Using reflection to access private method
-        boolean result = (boolean) ReflectionTestUtils.invokeMethod(userSearchService, "isQueryMatch", user, "JOHN");
-        assertTrue(result);
-    }
-
-    @Test
-    void isQueryMatch_ShouldReturnFalseWhenNoMatch() {
-        // Arrange
-        UUID userId = UUID.randomUUID();
-        AbstractUserDTO user = new BaseUserDTO(userId, "John Doe", "john@example.com", "johndoe", "Bio", "profile.jpg");
-
-        // Act & Assert - Using reflection to access private method
-        boolean result = (boolean) ReflectionTestUtils.invokeMethod(userSearchService, "isQueryMatch", user, "xyz");
-        assertFalse(result);
+        
+        // Verify that we get the expected user in the results
+        assertEquals(1, res.getUsers().size());
+        
+        // Find the recommended friend in the results
+        boolean foundRecommendedFriend = res.getUsers().stream()
+                .anyMatch(u -> u.getUser().getId().equals(user3Full.getId()) && 
+                              u.getRelationshipType() == UserRelationshipType.RECOMMENDED_FRIEND);
+        
+        assertTrue(foundRecommendedFriend, "Should contain the recommended friend");
     }
 
     @Test
@@ -308,16 +376,21 @@ class UserSearchServiceTests {
 
         when(friendRequestService.getIncomingFetchFriendRequestsByUserId(userId)).thenReturn(List.of());
 
-        UserSearchService spyUserSearchService = spy(userSearchService);
-        doReturn(List.of(friend)).when(spyUserSearchService).getLimitedRecommendedFriendsForUserId(userId);
-        doReturn(List.of()).when(userService).getFullFriendUsersByUserId(userId);
+        // Mock the userService methods that are called when searchQuery is empty
+        when(userService.getLimitedRecommendedFriendsForUserId(userId)).thenReturn(List.of(friend));
+        when(userService.getFullFriendUsersByUserId(userId)).thenReturn(List.of());
 
         // Act
-        SearchedUserResult result = spyUserSearchService.getRecommendedFriendsBySearch(userId, "");
+        SearchedUserResult result = userSearchService.getRecommendedFriendsBySearch(userId, "");
 
         // Assert
-        assertEquals(1, result.getSecond().size());
-        assertEquals(friend, result.getSecond().get(0));
+        assertEquals(1, result.getUsers().size());
+        
+        // Verify the user details and relationship type
+        var searchResultUser = result.getUsers().get(0);
+        assertEquals(friend.getId(), searchResultUser.getUser().getId());
+        assertEquals(friend.getName(), searchResultUser.getUser().getName());
+        assertEquals(UserRelationshipType.RECOMMENDED_FRIEND, searchResultUser.getRelationshipType());
     }
 
     @Test
@@ -325,13 +398,13 @@ class UserSearchServiceTests {
         // Arrange
         UUID userId = UUID.randomUUID();
 
-        when(friendRequestService.getIncomingFetchFriendRequestsByUserId(userId)).thenReturn(List.of());
-        when(friendRequestService.getIncomingCreateFriendRequestsByUserId(userId)).thenReturn(List.of());
-        when(friendRequestService.getSentFriendRequestsByUserId(userId)).thenReturn(List.of());
+        lenient().when(friendRequestService.getIncomingFetchFriendRequestsByUserId(userId)).thenReturn(List.of());
+        lenient().when(friendRequestService.getIncomingCreateFriendRequestsByUserId(userId)).thenReturn(List.of());
+        lenient().when(friendRequestService.getSentFriendRequestsByUserId(userId)).thenReturn(List.of());
 
         UserSearchService spyUserSearchService = spy(userSearchService);
         doReturn(List.of()).when(spyUserSearchService).getRecommendedMutuals(userId);
-        doReturn(List.of()).when(userService).getFullFriendUsersByUserId(userId);
+        lenient().doReturn(List.of()).when(friendshipQueryService).getFullFriendUsersByUserId(userId);
 
         // Act & Assert - Should not throw exceptions for unusual search terms
         assertDoesNotThrow(() -> spyUserSearchService.getRecommendedFriendsBySearch(userId, "%^&*"));
@@ -345,7 +418,17 @@ class UserSearchServiceTests {
 
         BaseUserDTO requesterInfo = new BaseUserDTO(requesterId, "David Search", "dsearch@example.com", "davidsearch", "Bio", "profile.jpg");
         FetchFriendRequestDTO friendRequest = mock(FetchFriendRequestDTO.class);
+        UUID friendRequestId = UUID.randomUUID();
         when(friendRequest.getSenderUser()).thenReturn(requesterInfo);
+        when(friendRequest.getId()).thenReturn(friendRequestId);
+
+        // Mock fuzzy search service to return requesterInfo as a match for "search"
+        User userObject = new User();
+        userObject.setId(requesterInfo.getId());
+        userObject.setName(requesterInfo.getName());
+        userObject.setUsername(requesterInfo.getUsername());
+        FuzzySearchService.SearchResult<User> searchResult = new FuzzySearchService.SearchResult<>(userObject, 0.95, "name", false);
+        when(fuzzySearchService.search(eq("search"), any(), any(), any())).thenReturn(List.of(searchResult));
 
         // Mock services
         when(friendRequestService.getIncomingFetchFriendRequestsByUserId(userId)).thenReturn(List.of(friendRequest));
@@ -354,14 +437,74 @@ class UserSearchServiceTests {
 
         UserSearchService spyUserSearchService = spy(userSearchService);
         doReturn(List.of()).when(spyUserSearchService).getRecommendedMutuals(userId);
-        doReturn(List.of()).when(userService).getFullFriendUsersByUserId(userId);
+        when(userService.getFullFriendUsersByUserId(userId)).thenReturn(List.of());
 
         // Act
         SearchedUserResult result = spyUserSearchService.getRecommendedFriendsBySearch(userId, "search");
 
         // Assert
-        assertEquals(1, result.getFirst().size());
-        assertEquals(friendRequest, result.getFirst().get(0));
+        assertEquals(1, result.getUsers().size());
+        
+        // Verify the friend request is in the results with correct relationship type
+        var searchResultUser = result.getUsers().get(0);
+        assertEquals(requesterInfo.getId(), searchResultUser.getUser().getId());
+        assertEquals(UserRelationshipType.INCOMING_FRIEND_REQUEST, searchResultUser.getRelationshipType());
+        assertEquals(friendRequestId, searchResultUser.getFriendRequestId());
+    }
+
+    @Test
+    void testSearchByQuery_PartialMatchFunctionality() {
+        // Arrange
+        String searchQuery = "ali";
+        List<User> mockUsers = List.of(user1, user2); // user1="Alice Johnson", user2="Alicia Jameson"
+        when(userRepository.findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class))).thenReturn(mockUsers);
+
+        // Mock fuzzy search to return both users as matching results
+        when(fuzzySearchService.search(eq(searchQuery), eq(mockUsers), any(), any()))
+                .thenReturn(List.of(
+                        new FuzzySearchService.SearchResult<>(user1, 0.85, "name", false),
+                        new FuzzySearchService.SearchResult<>(user2, 0.90, "name", false)
+                ));
+
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
+        assertEquals(2, result.size());
+        assertTrue(result.stream().anyMatch(u -> u.getName().equals("Alice Johnson")));
+        assertTrue(result.stream().anyMatch(u -> u.getName().equals("Alicia Jameson")));
+        
+        // Verify that the partial match query was called with the correct parameters
+        verify(userRepository).findUsersWithPartialMatch(eq(searchQuery.toLowerCase()), any(Limit.class));
+    }
+
+    @Test
+    void testSearchByQuery_HandlesEmptyQuery() {
+        // Arrange
+        String searchQuery = "";
+
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
+        assertTrue(result.isEmpty());
+        
+        // Verify that the repository was not called for empty query
+        verify(userRepository, never()).findUsersWithPartialMatch(any(), any());
+    }
+
+    @Test
+    void testSearchByQuery_HandlesBlanksAndWhitespace() {
+        // Arrange
+        String searchQuery = "   ";
+
+        // Act
+        List<BaseUserDTO> result = userSearchService.searchByQuery(searchQuery, UUID.randomUUID());
+
+        // Assert
+        assertTrue(result.isEmpty());
+        
+        // Verify that the repository was not called for blank query
+        verify(userRepository, never()).findUsersWithPartialMatch(any(), any());
     }
 }
-
